# armada-flyte

./: .gitignore  README.md  pyproject.toml
demo/: README.md  run.sh
deploy/: README.md  app.py  call_service.py
docs/: architecture.md  getting-started.md  gotchas.md
examples/: README.md  _runner.py  backend_gang.py  backend_run.py  fanout.py  fanout_map.py  function.py  gang.py  gang_dag.py  gang_pipeline.py  hello.py  hello_world_dag.py  ml_pipeline.py  pipeline.py  python_function.py  python_pipeline.py  real_pipeline.py  run_local.sh  run_python_pipeline.sh  single_task.py
notes/flyte/: storage-credentials.md
src/armada_flyte/: __init__.py  _proto_compat.py  config.py  connector.py  task.py
tests/: conftest.py  test_capture.py  test_config.py  test_connector_config.py  test_create.py  test_deploy.py  test_function_task.py  test_gang.py  test_state_mapping.py
